css/index.css
html {
	scroll-behavior: smooth;
}

::selection {
	color: #eee;
	background-color: #3f74a2;
}

*:focus {
	outline-offset: 0.2em;
	outline: 2px solid #72efb4 !important;
	border-color: transparent !important;
}

.container {
	max-width: 100ch;
	margin: auto;
	padding: 0 2ch;
}

header {
	padding-top: 2ch;
	margin-bottom: 5rem;
}

header ul {
	display: flex;
	list-style-type: none;
}

header ul li:last-child {
	margin-left: auto;
}

header ul a.btn {
	border: none;
	position: relative;
	padding-left: 3.25em;
}

header ul a.btn::before {
	content: '';
	width: 1.25em;
	height: 1.25em;
	top: 0.95em;
	left: 1.25em;
	position: absolute;
	background-repeat: no-repeat;
}

header ul a.btn.sponsor {
	color: hsl(300, 32%, 75%);
	border: 1px solid;
}

header ul a.btn.sponsor::before {
	background-image: url(../img/heart.svg);
}

header ul a.btn.github::before {
	background-image: url(../img/github.svg);
}

header ul a.btn.chat::before {
	top: 1.076em;
	background-image: url(../img/discord.svg);
}

body {
	padding: 0;
	text-align: center;
	background: #282f35;
	color: #eee;
	font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif;
}

.branding-color {
	font-weight: 600;
	color: #7be4b3; /* Slightly desaturated #72efb4 */
}

.buttons {
	margin-top: 3rem;
	display: flex;
	justify-content: center;
}

.top-sponsor {
	color: hsl(300, 32%, 75%);
	display: inline-block;
	margin-top: 1em;
	padding: 0.25em 0.5em;	
	padding-right: 2.25em;
	position: relative;
	border-radius: 0.5em;
	font-weight: 600;
	text-transform: lowercase;
	letter-spacing: 0.02em;
}

a.top-sponsor:hover, a.top-sponsor:focus {
	color: #eee;
}

.top-sponsor:before {
	content: '';
	width: 1em;
	height: 1em;
	top: 0.64em;
	right: 0.64em;
	position: absolute;
	background: url(../img/heart.svg);
}

a.btn {
	text-transform: uppercase;
	display: flex;
	border-radius: 8px;
	padding: 0.75em 1.5rem;
	color: #eee;
	border: 1px solid;
	letter-spacing: 0.025em;
	margin: 0 0.5rem;
	align-items: flex-end;
}

a.btn:hover, a.btn:focus {
	background-color: #f1ffd411;
}

a.btn.cta:hover, a.btn.cta:focus {
	background: linear-gradient(160deg, #f1ffd4 25%, #7be4b3)
}

a.btn span {
	display: inline-block;
}

a.btn img {
	width: 1.35rem;
	height: 1.35rem;
	display: inline-block;
	margin-left: 0.75em;
}

a.cta {	
	color: #222;
	font-weight: 600;
	background: #f1ffd4;
}

strong, b {
	font-weight: 600;
	color: #eee;
}

h1 {
	font-size: 3rem;
	font-weight: 800;
}

h1 + p {
	margin: 2rem 0 2rem 0;
	line-height: 1.35;
	font-size: 1.5rem;
	font-weight: 300;
}

ul.about {
	display: grid;
	grid-template-columns: 1fr 1fr;
	text-align: left;
	width: fit-content;
	list-style-type: none;
	margin: auto;
}

ul.about li {
	position: relative;
	padding-left: 1.75em;
	margin: 0.25rem 1rem;
}

ul.about li:before {
	content: '';
	width: 1.2em;
	height: 1.2em;
	top: 0.26em;
	left: 0;
	position: absolute;
	background: url(../img/check.svg);
}

.command {
	margin-top: 0.3em;
	font-size: 1rem;
	font-weight: 600;
	color: #72efb4;
	background-color: hsl(213, 15%, 12%);
	/* background-color: #d5e2bf; */
	padding: 0.5em 0.75em;
	border-radius: 0.5em;
	font-family: Consolas, 'Andale Mono WT', 'Andale Mono', 'Lucida Console', 'Lucida Sans Typewriter', 'DejaVu Sans Mono', 'Bitstream Vera Sans Mono', 'Liberation Mono', 'Nimbus Mono L', Monaco, 'Courier New', Courier, monospace;
}

.waves {
	margin-top: 4rem;
	transform: rotate(180deg) translateY(-2px);
	height: 4vw;
	width: 100%;
	user-select: none;
}

.feature {
	position: relative;
}

.feature::before {
	content: '';
	width: 10em;
	height: 10em;
	position: absolute;
	z-index: -1;
	top: -1em;
	left: -5em;
	transform: rotate(10deg);
}

.feature.auto-thread::before {
	background: url(../img/conversation.svg);
}

.feature.users::before {
	background: url(../img/users.svg);
}

.feature.question::before {
	background: url(../img/question.svg);
}

.feature.bulb::before {
	background: url(../img/light-bulb.svg);
}

.feature.wrench::before {
	background: url(../img/wrench.svg);
	transform: scaleX(-1) rotate(15deg);
}

#features {
	background-color: #20252b;
	padding-top: 3rem;
}

#features h2 {
	font-size: 1.75rem;
	font-weight: 300;
	letter-spacing: 0.1em;
	text-transform: uppercase;
	color: #72efb4;
}

#features ul {
	text-align: left;
	margin: auto;
}

#features .container {
	max-width: 115ch;
	padding: 4rem 2ch;
	display: flex;
	justify-content: space-between;
}

#features h3 {
	margin-bottom: 0.5em;
	font-weight: 800;
	font-size: 2rem;
}

#features h3 img {
	width: 1.25em;
	margin-right: 0.5rem;
}

#features h4 {
	margin: 2em 0 0.25em 0;
	padding-left: 1.5em;
	position: relative;
	width: fit-content;
}

#features h4::before {
	content: '';
	width: 1em;
	height: 1em;
	position: absolute;
	left: 0;
	top: 0.1em;
}
 
#features h4.cog::before {
	background: url(../img/cog.svg)
}

#features h4.code::before {
	background: url(../img/code.svg)
}

#features .content {
	width: 47.5%;
	text-align: left;
	justify-content: center;
	flex-direction: column;
	display: flex;
	color: #ddd;
	font-weight: 300;
	font-size: 1.15rem;
	z-index: 1;
}

#features .showcase {
	width: 47.5%;
	border-radius: 1rem;
	overflow: hidden;
	height: fit-content;
}

#features li:nth-child(even) {
	background-color: #23282e;
}

#features li:nth-child(even) .container {
	flex-direction: row-reverse;
}

#features li:nth-child(even) .feature::before {
	right: -5em;
	left: unset;
	transform: rotate(-10deg);
}

#features .suggest {
	min-height: 450px;
	justify-content: center;
}

#features .suggest a.btn {
	margin-top: 1em;
	display: inline-block;
}

#features .suggest .content {
	text-align: center;
}

#features .suggest .feature::before {
	left: unset;
	top: -2em;
	transform: unset;
}

@media screen and (max-width: 1024px) {
	#features .container {
		flex-direction: column !important;
	}

	#features .content,
	#features .showcase {
		width: 80vw;
		margin: auto;
	}

	#features h4 {
		margin-top: 1.5em;
	}

	#features .showcase {
		margin-top: 2rem;
	}

	.feature::before {
		display: none;
	}

	#features li:nth-child(even) .feature::before {
		left: unset;
		right: 10%;
		transform: unset;
	}
}


@media screen and (max-width: 600px) {
	header {
		padding-top: 0;
		margin-bottom: 1rem;
	}

	header ul a.btn.sponsor {
		border: none
	}

	header ul {
		flex-direction: column;
		align-items: center;
	}

	header ul li {
		margin-top: 0.5em;
	}

	header ul li:last-child {
		margin-left: unset;
	}

	a.btn img {
		display: none;
	}
}

